master class/subject/price api and superadmin validation in api
